# Car-Talk

./: .env.example  .gitignore  PROGRESS.md  README.md  automotive_review_chatbot_spec.md  code_guidelines.md  framework_plan.md
.github/workflows/: ci.yml
data/: aspect_lexicon.json  eval_queries.json  known_makes.json  sources.json  vehicle_catalog.json
docs/: deploy_vercel.md  eval_report.md  example_processed_document.json
docs/adr/: 0001-include-publisher-faq-and-pros-cons.md
pipeline/: README.md  pyproject.toml
pipeline/src/car_talk_pipeline/: __init__.py  adapter.py  chunking.py  config.py  embedding.py  evaluate.py  hashing.py  ingest.py  models.py  qdrant_index.py  retrieval.py
pipeline/src/car_talk_pipeline/chunking/: __init__.py  chunker.py  models.py  tokenizer.py
pipeline/src/car_talk_pipeline/embedding/: __init__.py  cache.py  openai_provider.py  provider.py  run.py
pipeline/src/car_talk_pipeline/scraping/: __init__.py  auto_co_il_adapter.py  manifest.py  models.py  processing.py  run.py  spider.py  storage.py
pipeline/tests/: test_adapter.py  test_auto_co_il_adapter.py  test_chunker.py  test_chunking.py  test_embedding.py  test_eval_dataset.py  test_evaluate.py  test_ingest.py  test_manifest.py  test_models.py  test_processing.py  test_qdrant_index.py  test_retrieval.py  test_spider.py
pipeline/tests/fixtures/: synthetic_article.html
pipeline/workflows/: scrape_article.md
web/: .gitignore  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/chat/: route.ts
web/app/api/health/: route.ts
web/components/: AnswerView.tsx  Backdrop.tsx  Chat.tsx  PreferencePanel.tsx
web/e2e/: acceptance.spec.ts  robustness.spec.ts  security.spec.ts
web/lib/generation/: answer.test.ts  answer.ts  citations.test.ts  citations.ts  constraints.test.ts  constraints.ts  context.test.ts  context.ts  generate.test.ts  generate.ts  generation.smoke.test.ts  recommend.test.ts  recommend.ts  respond.test.ts  respond.ts  schema.test.ts  schema.ts  session.test.ts  session.ts  systemPrompt.ts  validate.test.ts  validate.ts
web/lib/observability/: trace.ts
web/lib/retrieval/: aspects.test.ts  aspects.ts  catalog.ts  config.ts  embedding.ts  factory.ts  knownMakes.test.ts  knownMakes.ts  matcher.ts  normalize.test.ts  normalize.ts  orchestrator.test.ts  orchestrator.ts  qdrantClient.ts  retrieval.smoke.test.ts  retriever.test.ts  retriever.ts  types.ts  vehicleResolution.eval.test.ts  vehicleResolver.test.ts  vehicleResolver.ts
web/lib/security/: rateLimit.test.ts  rateLimit.ts
web/lib/session/: clientSession.ts
web/lib/ui/: icons.tsx  labels.ts
